--- a/danenberg_reproduction.Rmd
+++ b/danenberg_reproduction.Rmd
@@ -15,6 +15,7 @@ We focus on the description of the spatial organization of the TME as presented 
 The separation and phenotype classification of single cells is not reproduced and this is retrieved from the original paper.
 
 ```{r libraries and settings}
+#With R version 4.0
 library(tidyverse)
 library(ggplot2)
 library(data.table)
